--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,7 @@ dmypy.json
 
 # Lightning-Hydra-Template
 configs/local/default.yaml
-data/
+# data/  # dvc will handle this
 logs/
 .env
 .autoenv
