--- a/.dvc/config
+++ b/.dvc/config
@@ -1,3 +1,6 @@
 [core]
     analytics = false
     autostage = true
+    remote = kureta
+['remote "kureta"']
+    url = ssh://cloud.kureta.xyz/mnt/Pi-Disk/MLDATA/ddsp
