--- a/.dvc/config
+++ b/.dvc/config
@@ -4,3 +4,8 @@
     remote = kureta
 ['remote "kureta"']
     url = ssh://cloud.kureta.xyz/mnt/Pi-Disk/MLDATA/ddsp
+['remote "minio"']
+    url = s3://ddsp-data
+    endpointurl = https://cloud.kureta.xyz
+    access_key_id = user
+    secret_access_key = 314159265
