--- a/configs/experiment/baseline.yaml
+++ b/configs/experiment/baseline.yaml
@@ -3,7 +3,7 @@
 # to execute this experiment run:
 # python train.py experiment=example
 
-tags: ["ddsp", "GRU"]
+tags: ["alpha"]
 
 seed: 12345
 
@@ -22,4 +22,4 @@ datamodule:
 logger:
   wandb:
     tags: ${tags}
-    group: "ddsp"
+    group: "gru"
